--- a/CookieClicker/OptionsWindow.xaml
+++ b/CookieClicker/OptionsWindow.xaml
@@ -68,8 +68,8 @@
     </Window.Resources>
     <Grid>
         <!-- Bouton de fermeture -->
-        <Button x:Name="CloseButton" Content="X" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top"
-                Background="Transparent" Opacity="0.6" Foreground="White" FontWeight="Bold" BorderThickness="0" Click="CloseButton_Click" Margin="0,10,960,0">
+        <Button x:Name="CloseButton" Content="X" Width="30" Height="30" HorizontalAlignment="Left" VerticalAlignment="Top"
+                Background="Transparent" Opacity="0.4" Foreground="White" FontWeight="Bold" BorderThickness="0" Click="CloseButton_Click" Margin="10" Panel.ZIndex="1">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
                     <Setter Property="Foreground" Value="White"/>
@@ -79,7 +79,7 @@
                             <Setter Property="Opacity" Value="1.0"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="False">
-                            <Setter Property="Opacity" Value="0.6"/>
+                            <Setter Property="Opacity" Value="0.4"/>
                         </Trigger>
                     </Style.Triggers>
                 </Style>
