--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -179,14 +179,14 @@
         </Grid>
 
         <!-- Séparateur droit -->
-        <Image Source="pack://application:,,,/Images/bords.png" Grid.Column="3" Stretch="Fill"/>
+        <Image Source="pack://application:,,,/Images/bords.png" Grid.Column="4" Stretch="Fill" Margin="1,0,290,0"/>
 
         <!-- Panneau droit -->
         <StackPanel Grid.Column="4" Margin="10">
             <TextBlock Text="Boutique" FontSize="20" FontWeight="Bold" Foreground="White" Margin="10"/>
 
             <!-- Items de boutique -->
-            <StackPanel Orientation="Vertical" Margin="0">
+            <StackPanel Orientation="Vertical" Margin="0,90,0,0">
                 <Grid MouseLeftButtonDown="BuyItem1_Click" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -224,7 +224,7 @@
             <Image Source="pack://application:,,,/Images/ad1.jpg" Width="400" Height="50" Margin="10"/>
             <Image Source="pack://application:,,,/Images/ad1.jpg" Width="400" Height="50" Margin="10"/>
         </StackPanel>
-        <Image Source="pack://application:,,,/Images/bords.png" Grid.Column="4" Stretch="None" Margin="61,-377,228,583" RenderTransformOrigin="0.5,0.5">
+        <Image Source="pack://application:,,,/Images/bords.png" Grid.Column="4" Stretch="None" Margin="62,-382,227,578" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
