--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -186,7 +186,7 @@
             <TextBlock Text="Boutique" FontSize="20" FontWeight="Bold" Foreground="White" Margin="10"/>
 
             <!-- Items de boutique -->
-            <StackPanel Orientation="Vertical" Margin="0,90,0,0">
+            <StackPanel Orientation="Vertical" Margin="0,65,-10,0">
                 <Grid MouseLeftButtonDown="BuyItem1_Click" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
@@ -225,6 +225,26 @@
             <Image Source="pack://application:,,,/Images/ad1.jpg" Width="400" Height="50" Margin="10"/>
         </StackPanel>
         <Image Source="pack://application:,,,/Images/bords.png" Grid.Column="4" Stretch="None" Margin="62,-382,227,578" RenderTransformOrigin="0.5,0.5">
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-89.853"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
+        <Image Source="/Images/bords.png" Grid.Column="4" Stretch="None" Margin="463,-400,-173,700" RenderTransformOrigin="0.5,0.5">
+            <Image.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-89.853"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Image.RenderTransform>
+        </Image>
+        <Image Source="/Images/bords.png" Grid.Column="4" Stretch="None" Margin="463,-334,-173,634" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
