--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -58,14 +58,16 @@
             </Style.Triggers>
         </Style>
 
-        <Style x:Key="AvailableButtonStyle" TargetType="Grid">
-            <Setter Property="Opacity" Value="1"/>
-            <Setter Property="IsEnabled" Value="True"/>
-            <Style.Triggers>
-                <DataTrigger Binding="{Binding Path=IsEnabled, RelativeSource={RelativeSource Self}}" Value="False">
-                    <Setter Property="Opacity" Value="0.7"/>
-                </DataTrigger>
-            </Style.Triggers>
+        <Style x:Key="PriceTextStyle" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="#FF750D0D"/>
+            <Setter Property="FontWeight" Value="Normal"/>
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
+
+        <Style x:Key="CounterTextStyle" TargetType="TextBlock">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="14"/>
         </Style>
     </Window.Resources>
 
@@ -221,7 +223,7 @@
 
             <!-- Items de boutique -->
             <StackPanel Orientation="Vertical" Margin="0,65,-10,0">
-                <Grid x:Name="BuyItem1Grid" MouseLeftButtonDown="BuyItem1_Click" Margin="0" Style="{StaticResource AvailableButtonStyle}">
+                <Grid x:Name="BuyItem1Grid" MouseLeftButtonDown="BuyItem1_Click" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
@@ -243,11 +245,8 @@
                         </EventTrigger>
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/click.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
-                    <TextBlock Text="15 cookies" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item1Count" Text="0" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="2" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item1Price" Text="70 cookies" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="3" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Compteur1" HorizontalAlignment="Right" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" Width="50"/>
-                    <TextBlock x:Name="prix1" HorizontalAlignment="Left" Margin="71,41,0,0" TextWrapping="Wrap" Text="15 cookies" VerticalAlignment="Top" FontSize="16" Foreground="White" FontWeight="Bold"/>
+                    <TextBlock x:Name="Item1Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Top" Margin="258,23,17,0" RenderTransformOrigin="0.49,0.602" Height="28"/>
+                    <TextBlock x:Name="Item1Price" Style="{StaticResource PriceTextStyle}" Text="70 cookies" VerticalAlignment="Top" Margin="72,38,167,0"/>
                     <!-- Tooltip for Cursor -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
@@ -260,7 +259,7 @@
                     </Grid.ToolTip>
                 </Grid>
 
-                <Grid x:Name="BuyItem2Grid" MouseLeftButtonDown="BuyItem2_Click" Margin="0" Style="{StaticResource AvailableButtonStyle}">
+                <Grid x:Name="BuyItem2Grid" MouseLeftButtonDown="BuyItem2_Click" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
@@ -282,11 +281,8 @@
                         </EventTrigger>
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/grandmere.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
-                    <TextBlock Text="100 cookies, +5 cookies/sec" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item2Count" Text="0" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="2" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item2Price" Text="100 cookies" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="3" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Compteur2" HorizontalAlignment="Right" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" Width="50"/>
-                    <TextBlock x:Name="prix2" HorizontalAlignment="Left" Margin="74,34,0,0" TextWrapping="Wrap" Text="100 cookies" VerticalAlignment="Top" FontSize="16" Foreground="White" FontWeight="Bold"/>
+                    <TextBlock x:Name="Item2Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Center" Margin="259,0,15,0" Height="24"/>
+                    <TextBlock x:Name="Item2Price" Style="{StaticResource PriceTextStyle}" Text="100 cookies" VerticalAlignment="Top" Margin="71,34,158,0"/>
                     <!-- Tooltip for Grandma -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
@@ -299,7 +295,7 @@
                     </Grid.ToolTip>
                 </Grid>
 
-                <Grid x:Name="BuyItem3Grid" MouseLeftButtonDown="BuyItem3_Click" Margin="0" Style="{StaticResource AvailableButtonStyle}">
+                <Grid x:Name="BuyItem3Grid" MouseLeftButtonDown="BuyItem3_Click" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
@@ -321,11 +317,8 @@
                         </EventTrigger>
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/ferme.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
-                    <TextBlock Text="500 cookies, +10 cookies/sec" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item3Count" Text="0" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="2" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item3Price" Text="500 cookies" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="3" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Compteur3" HorizontalAlignment="Right" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" Width="50"/>
-                    <TextBlock x:Name="prix3" HorizontalAlignment="Left" Margin="72,34,0,0" TextWrapping="Wrap" Text="500 cookies" VerticalAlignment="Top" FontSize="16" Foreground="White" FontWeight="Bold"/>
+                    <TextBlock x:Name="Item3Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Center" Margin="260,0,20,0" Height="25"/>
+                    <TextBlock x:Name="Item3Price" Style="{StaticResource PriceTextStyle}" Text="500 cookies" VerticalAlignment="Top" Margin="71,34,160,0"/>
                     <!-- Tooltip for Farm -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
@@ -338,7 +331,7 @@
                     </Grid.ToolTip>
                 </Grid>
 
-                <Grid x:Name="BuyItem4Grid" MouseLeftButtonDown="BuyItem4_Click" Margin="0" Style="{StaticResource AvailableButtonStyle}">
+                <Grid x:Name="BuyItem4Grid" MouseLeftButtonDown="BuyItem4_Click" Margin="0">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
@@ -360,11 +353,8 @@
                         </EventTrigger>
                     </Grid.Triggers>
                     <Image Source="pack://application:,,,/Images/mine.png" Stretch="Fill" Grid.Column="0" Style="{StaticResource ItemImageStyle}" Opacity="0.7"/>
-                    <TextBlock Text="1000 cookies, +50 cookies/sec" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="1" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item4Count" Text="0" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="2" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Item4Price" Text="1000 cookies" FontSize="14" Foreground="White" VerticalAlignment="Center" Grid.Column="3" Margin="10,0,0,0"/>
-                    <TextBlock x:Name="Compteur4" HorizontalAlignment="Right" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" Width="50"/>
-                    <TextBlock x:Name="prix4" HorizontalAlignment="Left" Margin="70,38,0,0" TextWrapping="Wrap" Text="1000 cookies" VerticalAlignment="Top" FontSize="16" Foreground="White" FontWeight="Bold"/>
+                    <TextBlock x:Name="Item4Count" Style="{StaticResource CounterTextStyle}" Text="0" VerticalAlignment="Top" Margin="260,23,19,0" Height="24"/>
+                    <TextBlock x:Name="Item4Price" Style="{StaticResource PriceTextStyle}" Text="1000 cookies" VerticalAlignment="Top" Margin="66,35,155,0"/>
                     <!-- Tooltip for Mine -->
                     <Grid.ToolTip>
                         <ToolTip Background="Black" Foreground="White">
