--- a/CookieClicker/MainWindow.xaml
+++ b/CookieClicker/MainWindow.xaml
@@ -6,7 +6,7 @@
         SizeToContent="Manual"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
-        BorderBrush="SaddleBrown" BorderThickness="5">
+        BorderBrush="#B1533F " BorderThickness="5">
     <Window.Resources>
         <Style x:Key="CustomButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
